--- a/portfolio.html
+++ b/portfolio.html
@@ -43,47 +43,71 @@
         <h2>Projects List</h2>
         <ul>
           <li>
-            <img src="./images/p_1.jpg" width="360" alt="i" />
+            <img src="./images/p_1.jpg" width="360" alt="application layout" />
             <h3>Banking App Interface Concept</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="./images/p_2.jpg" width="360" alt="i" />
+            <img src="./images/p_2.jpg" width="360" alt="payment by phone" />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/p_3.jpg" width="360" alt="i" />
+            <img
+              src="./images/p_3.jpg"
+              width="360"
+              alt="main page of the application"
+            />
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="./images/p_4.jpg" width="360" alt="i" />
+            <img
+              src="./images/p_4.jpg"
+              width="360"
+              alt="the person behind the wheel"
+            />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/p_5.jpg" width="360" alt="i" />
+            <img
+              src="./images/p_5.jpg"
+              width="360"
+              alt="screensavers for phone"
+            />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/p_6.jpg" width="360" alt="i" />
+            <img src="./images/p_6.jpg" width="360" alt="the girl in orange" />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/p_7.jpg" width="360" alt="i" />
+            <img
+              src="./images/p_7.jpg"
+              width="360"
+              alt="design of stories on Instagram"
+            />
             <h3>Instagram Stories Concept</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/p_8.jpg" width="360" alt="i" />
+            <img
+              src="./images/p_8.jpg"
+              width="360"
+              alt="man with a package of vegetables and fruits"
+            />
             <h3>Organic Food</h3>
             <p>Web Site</p>
           </li>
           <li>
-            <img src="./images/p_9.jpg" width="360" alt="i" />
+            <img
+              src="./images/p_9.jpg"
+              width="360"
+              alt="barista drawing on cappuccino"
+            />
             <h3>Fresh Coffee</h3>
             <p>Web Site</p>
           </li>
