--- a/index.html
+++ b/index.html
@@ -8,25 +8,22 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"><span>Web</span>Studio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="./index.html">Studio</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      </address>
     </header>
     <main>
       <!-- hero section -->
       <section>
-        <h1>
-          Effective Solutions<br />
-          for Your Business
-        </h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <!-- features section -->
@@ -114,7 +111,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html"><span>Web</span>Studio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
